BugFix- Scrollbars in left div on demo

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -64,10 +64,10 @@ ul{
 .panel{
 	position: fixed;  
 	background-color:#F8F8F8;
-	overflow: scroll;
+	overflow: auto;
 	z-index:100;
 	line-height: 2;
-	margin-bottom:0px;
+	margin:0;
 }
 
 .panel-top{
